k3s/services/config/nacos/servers.yaml
###应用自建数据库；应用Ingress公布配置后盾###
---
apiVersion: v1
kind: Service
metadata:
name: nacos-headless
labels:
  app: nacos-headless
spec:
type: ClusterIP
clusterIP: None
ports:
  - port: 8848
    name: server
    targetPort: 8848
  - port: 9848
    name: client-rpc
    targetPort: 9848
  - port: 9849
    name: raft-rpc
    targetPort: 9849
    ## 兼容1.4.x版本的选举端口
  - port: 7848
    name: old-raft-rpc
    targetPort: 7848
selector:
  app: nacos
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
name: nacos
spec:
serviceName: nacos-headless
replicas: 3
template:
  metadata:
    labels:
      app: nacos
    annotations:
      pod.alpha.kubernetes.io/initialized: "true"
  spec:
    affinity:
      podAntiAffinity:
        requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
                - key: "app"
                  operator: In
                  values:
                    - nacos
            topologyKey: "kubernetes.io/hostname"
    containers:
      - name: k8snacos
        imagePullPolicy: Always
        image: nacos/nacos-server:latest
        resources:
          requests:
            memory: "2Gi"
            cpu: "500m"
        ports:
          - containerPort: 8848
            name: client
          - containerPort: 9848
            name: client-rpc
          - containerPort: 9849
            name: raft-rpc
          - containerPort: 7848
            name: old-raft-rpc
selector:
  matchLabels:
    app: nacos
---
# ------------------- App Ingress ------------------- #
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
name: nacos-headless
namespace: default

spec:
rules:
- host: nacos-web.nacos-demo.com
  http:
    paths:
    - path: /
      backend:
        serviceName: nacos-headless
        servicePort: server
